Fix appearance of draft admin banner on dark mode.
The new draft admin banner that lets admins switch between viewing other
people's draft data and viewing published data wasn't legible in dark
mode. This change fixes it so we use correct text and link colors.

Testing Done:
Viewed the banner in both light and dark modes.

Reviewed at https://reviews.reviewboard.org/r/14122/

--- a/reviewboard/static/rb/css/ui/banners.less
+++ b/reviewboard/static/rb/css/ui/banners.less
@@ -288,10 +288,19 @@
    */
   &__unpublished-draft {
     background: var(--ink-p-accent-info-bg);
+    color: var(--ink-p-accent-info-fg);
     padding: var(--ink-u-spacing-m);
 
     &:not(:last-child) {
       border-bottom: var(--rb-c-review-request-border);
+    }
+
+    a {
+      color: var(--ink-p-link-fg-on-light);
+    }
+
+    a:hover {
+      color: var(--ink-p-link-hover-fg-on-light);
     }
   }
 
